--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "react-clis",
-  "version": "1.2.0",
+  "version": "1.3.2",
   "description": "",
-  "keywords":["react","cli","react-cli","react-clis","react-es6-clis","es6"],
+  "keywords": [
+    "react",
+    "cli",
+    "react-cli",
+    "react-clis",
+    "react-es6-clis",
+    "es6"
+  ],
   "bin": {
     "react": "bin/react"
   },
@@ -21,7 +28,6 @@
     "commander": "^2.9.0",
     "consolidate": "^0.14.0",
     "download-git-repo": "^1.0.1",
-    "handlebars": "^4.0.5",
     "inquirer": "^6.0.0",
     "metalsmith": "^2.1.0",
     "minimatch": "^3.0.0",
@@ -33,7 +39,6 @@
     "semver": "^5.1.0",
     "tildify": "^1.2.0",
     "uid": "0.0.2",
-    "user-home": "^2.0.0",
     "validate-npm-package-name": "^3.0.0"
   },
   "devDependencies": {
